--- a/BanVeDiTourDuLich/Views/Admin/QuanLyNguoiDung.cshtml
+++ b/BanVeDiTourDuLich/Views/Admin/QuanLyNguoiDung.cshtml
@@ -1,79 +1,8 @@
-﻿
+﻿@model BanVeDiTourDuLich.ViewModels.QuanLyNguoiDungViewModel 
 @{
     ViewBag.Title = "QuanLyNhanVien";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
-
-<!-- Main Sidebar Container -->
-<aside class="main-sidebar sidebar-dark-primary elevation-4">
-    <!-- Brand Logo -->
-    <!-- Sidebar -->
-    <div class="sidebar">
-        <!-- Sidebar user panel (optional) -->
-        <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-            <div class="image">
-                <img src="../../dist/img/user2-160x160.jpg"
-                     class="img-circle elevation-2"
-                     alt="User Image" />
-            </div>
-            <div class="info">
-                <a href="#" class="d-block">Alexander Pierce</a>
-            </div>
-        </div>
-
-        <!-- SidebarSearch Form -->
-        <div class="form-inline">
-            <div class="input-group" data-widget="sidebar-search">
-                <input class="form-control form-control-sidebar"
-                       type="search"
-                       placeholder="Tìm kiếm"
-                       aria-label="Search" />
-                <div class="input-group-append">
-                    <button class="btn btn-sidebar">
-                        <i class="fas fa-search fa-fw"></i>
-                    </button>
-                </div>
-            </div>
-        </div>
-
-        <!-- Sidebar Menu -->
-        <nav class="mt-2">
-            <ul class="nav nav-pills nav-sidebar flex-column"
-                data-widget="treeview"
-                role="menu"
-                data-accordion="false">
-                <!-- Add icons to the links using the .nav-icon class
-                 with font-awesome or any other icon font library -->
-                <li class="nav-item">
-                    <a href="../../index.html" class="nav-link">
-                        <i class="nav-icon fas fa-tachometer-alt"></i>
-                        <p>Tổng quan</p>
-                    </a>
-                </li>
-
-                <!-- Quản lý đặt vé -->
-                <li class="nav-item">
-                    <a href="./tickets.html" class="nav-link">
-                        <i class="nav-icon fas fa-ticket-alt"></i>
-                        <p>Quản lý bán vé</p>
-                    </a>
-                </li>
-
-                <!-- /. Quản lý đặt vé -->
-                <!-- Quản lý người dùng -->
-                <li class="nav-item">
-                    <a href="./projects.html" class="nav-link active">
-                        <i class="nav-icon fas fas fa-users"></i>
-                        <p>Quản lý người dùng</p>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-        <!-- /.sidebar-menu -->
-    </div>
-    <!-- /.sidebar -->
-</aside>
-
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
@@ -101,7 +30,6 @@
     <div class="card">
         <div class="card-header">
             <h3 class="card-title">Người dùng</h3>
-
             <div class="card-tools">
                 <button type="button"
                         class="btn btn-tool"
@@ -130,36 +58,40 @@
                     </tr>
                 </thead>
                 <tbody>
+                    @{int i = 1;}  
+                    @foreach (var thongTinNguoiDung in Model.ThongTinCacNguoiDung)
+                    {
+                        <tr>
+                            <td>@i</td>
+                            <td>
+                                <a> @thongTinNguoiDung.TenNguoiDung </a>
+                                <br />
+                                <small> Tạo vào 01.01.2019 </small>
+                            </td>
+                            <td>
+                                <p>@thongTinNguoiDung.SoTienMua VNĐ</p>
+                            </td>
+                            <td>
+                                <p>@thongTinNguoiDung.SoVeMua vé</p>
+                            </td>
+                            <td class="project-state">
+                                <span class="badge badge-success">Có vé đang đợi</span>
+                            </td>
+                            <td class="project-actions text-center">
+                                <a class="btn btn-primary btn-sm"
+                                   href="/project-detail.html">
+                                    <i class="fas fa-folder"> </i>
+                                    Xem chi tiết
+                                </a>
 
-                <tr>
-                    <td>1</td>
-                    <td>
-                        <a> User </a>
-                        <br/>
-                        <small> Tạo vào 01.01.2019 </small>
-                    </td>
-                    <td>
-                        <p>1.000.000 VNĐ</p>
-                    </td>
-                    <td>
-                        <p>20 vé</p>
-                    </td>
-                    <td class="project-state">
-                        <span class="badge badge-success">Có vé đang đợi</span>
-                    </td>
-                    <td class="project-actions text-center">
-                        <a class="btn btn-primary btn-sm"
-                           href="./project-detail.html">
-                            <i class="fas fa-folder"> </i>
-                            Xem chi tiết
-                        </a>
+                                <a class="btn btn-danger btn-sm" href="#">
+                                    <i class="fas fa-trash"> </i>
+                                    Xóa
+                                </a>
+                            </td>
+                        </tr>
+                    }
 
-                        <a class="btn btn-danger btn-sm" href="#">
-                            <i class="fas fa-trash"> </i>
-                            Xóa
-                        </a>
-                    </td>
-                </tr>
                 </tbody>
             </table>
         </div>
