--- a/BanVeDiTourDuLich/Views/Shared/_LayoutAdmin.cshtml
+++ b/BanVeDiTourDuLich/Views/Shared/_LayoutAdmin.cshtml
@@ -592,14 +592,7 @@
         $(".nav-link").click(function(e){
             e.preventDefault(); // prevent default link button redirect behaviour     
             var url=$(this).attr("href");
-            $.ajax({
-                method: "GET",
-                url: url,
-                success: function (data) {
-                    var content = $(data).find('.content-wrapper')[0].innerHTML;
-                    $('.content-wrapper').html(content);
-                }
-            })
+            $('#content1').load(url);
         });
     });
 
