--- a/BanVeDiTourDuLich/Views/Admin/QuanLyTour.cshtml
+++ b/BanVeDiTourDuLich/Views/Admin/QuanLyTour.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "QuanLyTour";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
-    int i = 1;
+    int i = Model.STT;
 }
 
 
@@ -118,12 +118,11 @@
         <div class="container">
            
             <div class="pagination">
-               
-                <a   href="/admin/QuanLyTour?page=1">1</a>
-                <a href="/admin/QuanLyTour?page=2">2</a>
-                <a href="/admin/QuanLyTour?page=3">3</a>
-                
-             
+                @{ int i2 = 0;}
+                @for (i2 = 1; i2 < Model.SoTrang + 1; i2++)
+                {
+                    <a  href="/admin/QuanLyTour?page=@i2.ToString()">@i2.ToString()</a>
+                }
             </div>
         </div>
         <!-- /.card-body -->
