--- a/BanVeDiTourDuLich/Views/Admin/QuanLyNhanVien.cshtml
+++ b/BanVeDiTourDuLich/Views/Admin/QuanLyNhanVien.cshtml
@@ -15,10 +15,9 @@
                 </div>
                 <!-- /.col -->
                 <div class="col-sm-6">
-                    <ol class="breadcrumb float-sm-right">
-                        <li class="breadcrumb-item"><a href="#">Trang chủ</a></li>
-                        <li class="breadcrumb-item active">Quản lý nhân viên</li>
-                    </ol>
+                    <a style="    margin-left: auto;
+                                      align-self: end !important;
+                                      display: table;" href="/Admin/ThemNhanVien">Thêm Nhân Viên</a>
                 </div>
                 <!-- /.col -->
             </div>
@@ -95,6 +94,16 @@
                                         chỉnh sửa
                                     </a>
                                 </button>
+                                
+                                <form class="deleteForm" action="/Admin/XoaNhanVien/" method="post">
+                                    <input name='id' type="hidden" value="@thongTinNguoiDung.MaNhanVien" />
+                                    <button class="btn-delete" type='submit'>
+                                        <a class="btn btn-danger btn-sm btn-max-width js-xoa">
+                                            <i class="fas fa-trash"> </i>
+                                            Xóa
+                                        </a>
+                                    </button>
+                                </form>
                             </td>
                         </tr>
                     }
@@ -161,5 +170,25 @@
                 window.location.href = `/admin/QuanLyNhanVienSort?sortValue=${value}&sortDirection=${direction}`;
             }
         })
+
+        $('.deleteForm').submit(function (e) {
+            e.preventDefault();
+            var data = $(this).serialize();
+            var url = $(this).attr('action');
+            $.ajax({
+                method: 'POST',
+                url: url,
+                data: data,
+                success: function ({ msg }) {
+                    alert(msg);
+                    window.location.reload();
+                },
+                error: function (data) {
+                    alert(data.responseJSON.msg);
+                }
+            });
+        });
+
+
     </script>
 }
